--- a/Modules/Chat/Modules.Chat/Modules.Chat.csproj
+++ b/Modules/Chat/Modules.Chat/Modules.Chat.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj" />
     <ProjectReference Include="..\Modules.Chat.Infrastructure\Modules.Chat.Infrastructure.csproj" />
-    <ProjectReference Include="..\Shared.Infrastructure\Shared.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
