--- a/Modules/Authentication/Modules.Authentication.Infrastructure/Modules.Authentication.Infrastructure.csproj
+++ b/Modules/Authentication/Modules.Authentication.Infrastructure/Modules.Authentication.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj" />
     <ProjectReference Include="..\Modules.Authentication.Application\Modules.Authentication.Application.csproj" />
   </ItemGroup>
 
