--- a/Modules/Chat/Modules.Chat.Infrastructure/Modules.Chat.Infrastructure.csproj
+++ b/Modules/Chat/Modules.Chat.Infrastructure/Modules.Chat.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure\Shared.Infrastructure.csproj" />
     <ProjectReference Include="..\Modules.Chat.Application\Modules.Chat.Application.csproj" />
   </ItemGroup>
 
