--- a/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
+++ b/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Application\Shared.Application.csproj" />
     <ProjectReference Include="..\Modules.Authentication.Domain\Modules.Authentication.Domain.csproj" />
   </ItemGroup>
 
