--- a/Modules/Chat/Modules.Chat.Application/Modules.Chat.Application.csproj
+++ b/Modules/Chat/Modules.Chat.Application/Modules.Chat.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.Application\Shared.Application.csproj" />
     <ProjectReference Include="..\Modules.Chat.Domain\Modules.Chat.Domain.csproj" />
   </ItemGroup>
 
