Added init migration

--- a/Host/API/appsettings.json
+++ b/Host/API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UsersDbConnection": "Server=(localdb)\\mssqllocaldb;Database=UsersDatabase;Trusted_Connection=True;",
+    "AppealsDbConnection": "Server=(localdb)\\mssqllocaldb;Database=AppealsDatabase;Trusted_Connection=True;"
+  }
 }
