added Jwt token generator

--- a/Host/API/appsettings.json
+++ b/Host/API/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "UsersDbConnection": "Server=(localdb)\\mssqllocaldb;Database=UsersDatabase;Trusted_Connection=True;",
     "AppealsDbConnection": "Server=(localdb)\\mssqllocaldb;Database=AppealsDatabase;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "mysupersecret_secretkey!123",
+    "Issuer": "http://localhost:47609",
+    "Audience": "https://localhost:47609"
   }
 }
