--- a/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
+++ b/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Modules.Authentication.Domain\Modules.Authentication.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
 </Project>
