--- a/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
+++ b/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Shared.Application\Shared.Application.csproj" />
-    <ProjectReference Include="..\Modules.Authentication.Domain\Modules.Authentication.Domain.csproj" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
+    <ProjectReference Include="..\..\..\Shared\Shared.Application\Shared.Application.csproj" />
+    <ProjectReference Include="..\Modules.Authentication.Domain\Modules.Authentication.Domain.csproj" />
   </ItemGroup>
 
 </Project>
