--- a/Modules/Chat/Modules.Chat.Application/Modules.Chat.Application.csproj
+++ b/Modules/Chat/Modules.Chat.Application/Modules.Chat.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Modules.Chat.Domain\Modules.Chat.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Querys\" />
+  </ItemGroup>
+
 </Project>
