clearing the code

--- a/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
+++ b/Modules/Authentication/Modules.Authentication.Application/Modules.Authentication.Application.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Modules.Authentication.Domain\Modules.Authentication.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
